[package]
name = "nbt-sniffer"
version = "0.2.0"
edition = "2024"
description = "A command-line tool designed to scan Minecraft Java Edition world data."
license = "MIT"
repository = "https://github.com/Lemonzyy/nbt-sniffer"
keywords = ["minecraft", "nbt", "scanner", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
flate2 = "1.1"
mca = "1.0"
ptree = "0.5"
rayon = "1.10"
simdnbt = "0.10"
valence_nbt = { version = "0.8", features = ["snbt"] }
walkdir = "2.5.0"
uuid = "1.17"
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
